[package]
name = "stdin_or_clipboard"
version = "0.5.0"
edition = "2021"
description = "Get text from stdin or clipboard"

[dependencies]
# Read Clipboard
arboard = { version = "3.6", default-features = false }

# Error management
thiserror = "2.0"

# Async utilities
tokio = { version = "1.45", features = ["io-util", "io-std"], optional = true }

[dev-dependencies]
arboard = "3.6"
tokio = { version = "1.45", features = ["io-util", "io-std", "macros", "rt", "rt-multi-thread"] }

[features]
default = ["async"]
async = ["dep:tokio"]
sync = []
