[package]
name = "clipin"
version = "0.8.1"
edition = "2021"
authors = ["kaoru <k@warpnine.io>"]
license = "MIT"
description = "A Rust library to get text from clipboard or stdin"
homepage = "https://github.com/0x6b/clipin"
repository = "https://github.com/0x6b/clipin"
documentation = "https://docs.rs/clipin"
readme = "README.md"
keywords = ["clipboard", "stdin", "input", "text"]

[dependencies]
# Read Clipboard
arboard = { version = "3.6", default-features = false }

# Error management
thiserror = "2.0"

# Async utilities
tokio = { version = "1.49", features = ["io-util", "io-std"], optional = true }

[dev-dependencies]
arboard = "3.6"
tokio = { version = "1.49", features = ["io-util", "io-std", "macros", "rt", "rt-multi-thread"] }

[features]
default = []
async = ["dep:tokio"]
sync = []
